# agent-context-engine

./: .gitignore  AGENTS.md  AGENT_BOOTSTRAP.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README_de.md  SECURITY.md  SKILL.md  THIRD_PARTY_NOTICES.md  opencode.json  session-start-hook-entry.md
backend/: pyproject.toml
backend/src/agent_context_engine/: __init__.py  monitor.py
backend/src/agent_context_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/src/agent_context_engine/adapters/: __init__.py  command_publishers.py  executable_permissions.py  global_command_publication.py  hook_adapter_rendering.py  instruction_rendering.py  launchagent.py  path_quoting.py  platform_detection.py  process_launch.py  scheduler_installers.py  serialization.py  system_open.py  system_scheduler.py  workspace_binding.py  wrapper_renderers.py
backend/src/agent_context_engine/application/: classifier.py  diagnostics.py  dream.py  dream_queue.py  file_access.py  firewall.py  firewall.spec.md  firewall_rules.py  hook_effects.py  hooks.spec.md  hooks_state.py  installation.py  instance_profile.py  integrations.py  integrations.spec.md  maintenance.py  monitor.py  personal.py  query_expansion.py  query_intent.py  retrieval.py  retrieval.spec.md  risk.py  risk_api.py  risk_api.spec.md  runtime_guidance.py  scheduler.py  scheduler.spec.md  scheduler_installation.py  schema_proposals.py  session_api.py  startup_context.py  summaries.py  system_control.py  system_control.spec.md  (+1 more)
backend/src/agent_memory/: __init__.py
(+388 files in other folders)
