[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-context-engine"
version = "0.2.9"
description = "Local agent context engine backend"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = ["PyYAML==6.0.2"]

[project.scripts]
agent-context-engine = "agent_context_engine.interfaces.cli.main:main"
agent-memory = "agent_context_engine.interfaces.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
